lualib.c3i

module lua54::lua;

const COLIBNAME = 	"coroutine";
const TABLIBNAME = 	"table";
const IOLIBNAME = 	"io";
const OSLIBNAME = 	"os";
const STRLIBNAME = 	"string";
const UTF8LIBNAME = "utf8";
const MATHLIBNAME = "math";
const DBLIBNAME = 	"debug";
const LOADLIBNAME = "package";

extern fn void open_base		(LuaState* l) @cname("luaopen_base");
extern fn void open_coroutine	(LuaState* l) @cname("luaopen_coroutine");
extern fn void open_table		(LuaState* l) @cname("luaopen_table");
extern fn void open_io			(LuaState* l) @cname("luaopen_io");
extern fn void open_os			(LuaState* l) @cname("luaopen_os");
extern fn void open_string		(LuaState* l) @cname("luaopen_string");
extern fn void open_utf8		(LuaState* l) @cname("luaopen_utf8");
extern fn void open_math		(LuaState* l) @cname("luaopen_math");
extern fn void open_debug		(LuaState* l) @cname("luaopen_debug");
extern fn void open_package		(LuaState* l) @cname("luaopen_package");

/* open all previous libraries */
extern fn void openlibs(LuaState* l) @cname("luaL_openlibs");

macro lua_assert(x)	{ return ((void)0); }
